[metadata]
name = fix_pyorch
version = 0.0.2
author = Jon Jenkins
author_email = jj@fincloud.io
description = A library to parse FIX formatted files, using FIXOrchestra metadata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fincloud-io/fix_pyorch
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src